[gd_scene load_steps=10 format=3 uid="uid://4yqy5hqx3q5o"]

[ext_resource type="Script" path="res://Source/game.gd" id="1_jy8ap"]
[ext_resource type="Script" path="res://Source/Characters/ai_controller.gd" id="2_mcbnu"]
[ext_resource type="PackedScene" uid="uid://ygxngejhh6hc" path="res://Source/UI/debug_ui.tscn" id="2_w3e7m"]
[ext_resource type="PackedScene" uid="uid://dseanuadidjfx" path="res://Source/Characters/FireKnight/fire_knight.tscn" id="3_hc1mj"]
[ext_resource type="PackedScene" uid="uid://c05mlav2iwcyn" path="res://Source/UI/game_ui.tscn" id="4_mgi5j"]
[ext_resource type="PackedScene" uid="uid://dtrhxtqg2n3qc" path="res://Source/Levels/level_2.tscn" id="5_ya2uy"]
[ext_resource type="Script" path="res://Source/camera.gd" id="6_p6jvm"]
[ext_resource type="PackedScene" uid="uid://d4kh6r37uyap6" path="res://Source/game_audio.tscn" id="7_mt6fe"]
[ext_resource type="Script" path="res://Source/device_input.gd" id="9_4r6jt"]

[node name="Game" type="Node2D"]
script = ExtResource("1_jy8ap")
ai_player_controller_script = ExtResource("2_mcbnu")
player_scene = ExtResource("3_hc1mj")
player1_color = Color(0.639216, 0.203922, 0.160784, 1)
player2_color = Color(0.172549, 0.298039, 0.745098, 1)

[node name="GameUI" parent="." instance=ExtResource("4_mgi5j")]

[node name="DebugUI" parent="." instance=ExtResource("2_w3e7m")]
visible = false

[node name="Level2" parent="." instance=ExtResource("5_ya2uy")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(126, 40)
scale = Vector2(1.25, 1)
zoom = Vector2(1.1, 1.1)
script = ExtResource("6_p6jvm")
min_x = -1000
max_x = 1000

[node name="GameAudio" parent="." instance=ExtResource("7_mt6fe")]
position = Vector2(261, 56)
scale = Vector2(1.75, 1.75)

[node name="RoundTimer" type="Timer" parent="."]

[node name="RoundResetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RoundStartTimer" type="Timer" parent="."]

[node name="DeviceInput" type="Node" parent="."]
script = ExtResource("9_4r6jt")

[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="RoundResetTimer" to="." method="_on_round_reset_timer_timeout"]
[connection signal="timeout" from="RoundStartTimer" to="." method="_on_round_start_timer_timeout"]
